--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
       var loaderUrl = buildUrl + "/CryptoSlotsGzip.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/CryptoSlotsGzip.data.unityweb",
+        dataUrl: "https://media.githubusercontent.com/media/swytapp/sa-demo/main/Build/CryptoSlotsGzip.data.unityweb",
         frameworkUrl: buildUrl + "/CryptoSlotsGzip.framework.js.unityweb",
         codeUrl: buildUrl + "/CryptoSlotsGzip.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "crypto-slots",
-        productVersion: "1.1.14",
+        productVersion: "1.1.15",
         showBanner: unityShowBanner,
       };
 
