--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+      <canvas id="unity-canvas" width=2048 height=1153 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -55,13 +55,13 @@
       var loaderUrl = buildUrl + "/CryptoSlotsGzip.loader.js";
       var config = {
         arguments: [],
-        dataUrl: "https://media.githubusercontent.com/media/swytapp/sa-demo/main/Build/CryptoSlotsGzip.data.unityweb",
+        dataUrl: buildUrl + "/CryptoSlotsGzip.data.unityweb",
         frameworkUrl: buildUrl + "/CryptoSlotsGzip.framework.js.unityweb",
         codeUrl: buildUrl + "/CryptoSlotsGzip.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "crypto-slots",
-        productVersion: "1.2.3",
+        productVersion: "1.2.4",
         showBanner: unityShowBanner,
       };
 
@@ -89,8 +89,8 @@
 
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+        canvas.style.width = "2048px";
+        canvas.style.height = "1153px";
       }
 
       document.querySelector("#unity-loading-bar").style.display = "block";
